Adding IWD onepagecheckout support

--- a/app/design/frontend/base/default/template/twocheckout/form.phtml
+++ b/app/design/frontend/base/default/template/twocheckout/form.phtml
@@ -6,7 +6,7 @@
         <div class="input-box">
             <table>
                 <tr>
-                    <td><input value="" type="text" id="ccNo" class="required-entry"/></td>
+                    <td><input value="" type="text" id="ccNo" class="required-entry input-text"/></td>
                     <td><div id="<?php echo $_code ?>_card_icon"></div></td>
                 </tr>
             </table>
