--- a/app/design/frontend/base/default/template/twocheckout/script.phtml
+++ b/app/design/frontend/base/default/template/twocheckout/script.phtml
@@ -1,2 +1,2 @@
 <?php $twocheckout = Mage::getModel('twocheckout/payment'); ?>
-<?php echo $twocheckout->getApiUrl(); ?>
+<?php echo $twocheckout->getEnvJS(); ?>
