Update to support current 2co.js - remove support for custom onepage checkouts as are not able to get access to the current versions

--- a/app/design/frontend/base/default/template/twocheckout/script.phtml
+++ b/app/design/frontend/base/default/template/twocheckout/script.phtml
@@ -1,2 +1,3 @@
+<script type="text/javascript" src="https://www.2checkout.com/checkout/api/2co.min.js"></script>
 <?php $twocheckout = Mage::getModel('twocheckout/payment'); ?>
 <?php echo $twocheckout->getEnvJS(); ?>
